--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 							<p>Хорошо разбираюсь в парадигме ООП, паттернах проектирования, алгоритмах и структурах данных. Умею работать с многопоточностью и асинхронным программированием.</p>
 							<p>В качестве среды разработки использую MS Visual Studio и WebStorm. Люблю использовать редактор Visual Studio Code. Также использую Postman и Swagger для работы с API и документирования API соответственно. Умею работать с Git.</p>
 							<p>Из СУБД работаю в основном с MS SQL Server. Также имеется опыт работы с PostgreSQL и MySQL.</p>
-							<p>Выпускник механико-математического факультета МГУ им. М.В. Ломоносова (окончил с отличием в 2020 г.). Специализация: геометрия и топология (алгебраическая топология, интегрируемые системы). Научный руководитель: академик РАН А.Т. Фоменко. Программированием начал заниматься ещё учась в средней школе.</p>
+							<p>Выпускник механико-математического факультета МГУ им. М.В. Ломоносова (окончил с отличием в 2020 г.). Специализация: геометрия и топология. Область научных интересов: алгебраическая топология (бордизмы, спектральные последовательности), интегрируемые системы (биллиарды на плоскости Минковского). Научный руководитель: академик РАН А.Т. Фоменко. Программированием начал заниматься ещё учась в средней школе.</p>
 							<p>Английским языком владею на достаточно высоком уровне. Люблю осваивать новые технологии и подходы в разработке.</p>
 							<p>С некоторыми моими проектами Вы можете ознакомиться ниже.</p>
 						</div>
