--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				<div class="sidebar-soc">
 					<ul>
 						<li><a href="mailto:anton.skvortsov.1996@yandex.ru"><i class="fa fa-envelope"></i></a></li>
-						<li><a href="https://vk.com/anton_skvortsov10" target="_blank"><i class="fa fa-vk"></i></a></li>
+						<li><a href="https://vk.com/antonskvortsov10" target="_blank"><i class="fa fa-vk"></i></a></li>
 						<li><a href="https://github.com/antonskvortsov10" target="_blank"><i class="fa fa-github"></i></a></li>
 					</ul>
 				</div>
@@ -470,7 +470,7 @@
 										<p>E-mail: <a href="mailto:anton.skvortsov.1996@yandex.ru">anton.skvortsov.1996@yandex.ru</a></p>
 									</li>
 									<li><i class="fa-li fa fa-vk"></i>
-										<p>ВКонтакте: <a href="https://vk.com/anton_skvortsov10" target="_blank">vk.com/anton_skvortsov10</a></p>
+										<p>ВКонтакте: <a href="https://vk.com/antonskvortsov10" target="_blank">vk.com/antonskvortsov10</a></p>
 									</li>
 								</ul>
 							</div>
