--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
 					<div class="papers">
 						<div class="section-content">
 							<h2>Профессиональные навыки</h2>
-							<p>Специализируюсь в области разработки программного обеспечения, backend разработки на C#/.NET (WinForms, ASP.NET MVC/WebAPI, ASP.NET Core, Entity Framework, WCF, WPF). Разрабатываю программное обеспечение с использованием стека технологий Microsoft.</p>
-							<p>Владею навыками frontend разработки (JavaScript, React, Redux, MobX, JQuery, HTML, CSS, Bootstrap, SCSS/SASS, Webpack, Babel). Уважаю хорошие UI/UX-решения.</p>
+							<p>Специализируюсь в области разработки программного обеспечения, backend разработки на C#/.NET (ASP.NET Core, ASP.NET MVC/WebAPI, Entity Framework, ADO.NET, WinForms, WCF). Разрабатываю программное обеспечение с использованием стека технологий Microsoft.</p>
+							<p>Владею навыками frontend разработки. Уважаю хорошие UI/UX-решения.</p>
 							<p>В разное время писал на PHP, Python, C++, C, MATLAB.</p>
 							<p>Хорошо разбираюсь в парадигме ООП, паттернах проектирования, алгоритмах и структурах данных. Умею работать с многопоточностью и асинхронным программированием.</p>
-							<p>В качестве среды разработки использую MS Visual Studio и WebStorm. Люблю использовать редактор Visual Studio Code. Также использую Postman и Swagger для работы с API и документирования API соответственно. Умею работать с Git.</p>
+							<p>В качестве среды разработки использую MS Visual Studio. Люблю использовать редактор Visual Studio Code. Также использую Postman и Swagger для работы с API и документирования API соответственно. Умею работать с Git.</p>
 							<p>Из СУБД работаю в основном с MS SQL Server. Также имеется опыт работы с PostgreSQL и MySQL.</p>
-							<p>Выпускник механико-математического факультета МГУ им. М.В. Ломоносова (окончил с отличием в 2020 г.). Специализация: геометрия и топология. Область научных интересов: алгебраическая топология (бордизмы, спектральные последовательности), интегрируемые системы (биллиарды, симплектическая геометрия). Научный руководитель: академик РАН А.Т. Фоменко.</p>
+							<p>Выпускник механико-математического факультета МГУ им. М.В. Ломоносова (окончил с отличием в 2020 г.). Специализация: геометрия и топология. Область научных интересов: алгебраическая топология (бордизмы/кобордизмы, спектральные последовательности), интегрируемые системы (биллиарды, симплектическая геометрия). Научный руководитель: академик РАН А.Т. Фоменко.</p>
 							<p>Английским языком владею на достаточно высоком уровне. Люблю осваивать новые технологии и подходы в разработке.</p>
 							<p>С некоторыми моими проектами Вы можете ознакомиться ниже.</p>
 						</div>
@@ -266,21 +266,6 @@
 												<li><i class="fa-li fa fa-check"></i>PHP</li>
                                                 <li><i class="fa-li fa fa-check"></i>YII2</li>
                                                 <li><i class="fa-li fa fa-check"></i>MySQL</li>
-                                            </ul>
-										</div>
-									</div>
-								</div>
-								<div class="timeline-item">
-                                    <div class="timeline-item-trigger"><i class="fa fa-plus"></i></div>
-                                    <div class="timeline-item-content">
-										<div class="timeline-item-arrow"><i></i></div>
-										<h3>Приложение для парсинга курсов валют</h3>
-										<div class="timeline-item-content-spoiler" style="display: none;">
-											<p><a href="https://github.com/antonskvortsov10/CurrencyParser">Репозиторий с исходным кодом</a></p>
-											<h3>Цель: создание кроссплатформенного приложения для парсинга курсов валют (по курсу ЦБ).</h3>
-											<p>Используемые языки, фреймворки и технологии</p>
-                                            <ul class="fa-ul">
-                                                <li><i class="fa-li fa fa-check"></i>Java</li>
                                             </ul>
 										</div>
 									</div>
