--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 										<div class="timeline-item-content-spoiler" style="display: none;">
 											<iframe width="560" height="315" src="https://www.youtube.com/embed/-ZrHqLKS-Rk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 											<p><a href="https://github.com/antonskvortsov10/resort-search-app">Репозиторий с исходным кодом</a></p>
-											<h3>Цель: разработка frontend-части веб-приложения (SPA) по поиску курортного жилья.</h3>
+											<h3>Цель: разработка frontend-части прототипа веб-приложения по поиску курортного жилья.</h3>
 											<p>Используемые языки, фреймворки и технологии:</p>
                                             <ul class="fa-ul">
                                                 <li><i class="fa-li fa fa-check"></i>JavaScript</li>
@@ -98,7 +98,7 @@
 										<div class="timeline-item-content-spoiler" style="display: none;">
 											<iframe width="560" height="315" src="https://www.youtube.com/embed/23FZogLEi4M" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 											<p><a href="https://github.com/antonskvortsov10/online-electronics-store">Репозиторий с исходным кодом</a></p>
-											<h3>Цель: разработка интернет-магазина по продаже цифровой техники с использованием стека PERN.</h3>
+											<h3>Цель: разработка MVP интернет-магазина по продаже цифровой техники с использованием стека PERN.</h3>
 											<p>Используемые языки, фреймворки и технологии:</p>
                                             <ul class="fa-ul">
                                                 <li><i class="fa-li fa fa-check"></i>JavaScript</li>
@@ -120,7 +120,7 @@
 										<div class="timeline-item-content-spoiler" style="display: none;">
 											<iframe width="560" height="315" src="https://www.youtube.com/embed/BMG94lw9SiM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 											<p><a href="https://github.com/antonskvortsov10/re-store">Репозиторий с исходным кодом</a></p>
-											<h3>Цель: разработка frontend-части веб-приложения (SPA), представляющего собой интернет-магазин электронной литературы по программированию.</h3>
+											<h3>Цель: разработка frontend-части веб-приложения, представляющего собой прототип интернет-магазина электронной литературы по программированию.</h3>
 											<p>Используемые языки, фреймворки и технологии:</p>
                                             <ul class="fa-ul">
                                                 <li><i class="fa-li fa fa-check"></i>JavaScript</li>
