--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div class="main wrapper clearfix">
 			<aside>
 				<div class="sidebar-header">
-					<h2>Антон Скворцов <span>C#/.NET разработчик</span><span>Web разработчик</span></h2>
+					<h2>Антон Скворцов <span>C#/.NET разработчик</span></h2>
 				</div>
 				<nav>
 					<ul>
@@ -40,14 +40,14 @@
 					<img src="img/ProfilePhoto.jpg" alt="" class="img-circle">
 					<h1>Антон Скворцов</h1>
 					<hr>
-					<h3>C#/.NET разработчик, web разработчик.<br> Живу в Москве. Занимаюсь web разработкой и разработкой программного обеспечения. Владею английским языком на достаточно высоком уровне. Люблю осваивать новые технологии и подходы в разработке.</h3>
+					<h3>Занимаюсь разработкой программного обеспечения. Владею английским языком на достаточно высоком уровне. Люблю осваивать новые технологии и подходы в разработке.</h3>
 					<hr>
 				</header>
 				<section id="skills">
 					<div class="papers">
 						<div class="section-content">
 							<h2>Профессиональные навыки</h2>
-							<p>Специализируюсь в области разработки программного обеспечения, backend разработки на C#/.NET (ASP.NET Core, ASP.NET MVC/WebAPI, Entity Framework, ADO.NET, WinForms, WCF). Разрабатываю программное обеспечение с использованием стека технологий Microsoft.</p>
+							<p>Специализируюсь в области разработки программного обеспечения, backend разработки на C#/.NET (ASP.NET Core, ASP.NET MVC/WebAPI, Entity Framework, LINQ, ADO.NET, WinForms, WCF, WPF). Разрабатываю программное обеспечение с использованием стека технологий Microsoft.</p>
 							<p>В разное время писал на PHP, Python, C++, C, MATLAB.</p>
 							<p>Хорошо разбираюсь в парадигме ООП, паттернах проектирования, алгоритмах и структурах данных. Умею работать с асинхронным программированием и многопоточностью.</p>
 							<p>В качестве среды разработки использую MS Visual Studio. Люблю использовать редактор Visual Studio Code. Также использую Postman и Swagger для работы с API и документирования API соответственно. Умею работать с Git.</p>
