--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 							<p>Специализируюсь в области разработки программного обеспечения, backend разработки на C#/.NET (ASP.NET Core, ASP.NET MVC/WebAPI, Entity Framework, LINQ, ADO.NET, WinForms, WCF, WPF). Разрабатываю программное обеспечение с использованием стека технологий Microsoft.</p>
 							<p>В разное время писал на PHP, Python, C++, C, MATLAB.</p>
 							<p>Хорошо разбираюсь в парадигме ООП, паттернах проектирования, алгоритмах и структурах данных. Умею работать с асинхронным программированием и многопоточностью.</p>
-							<p>В качестве среды разработки использую MS Visual Studio. Люблю использовать редактор Visual Studio Code. Также использую Postman и Swagger для работы с API и документирования API соответственно. Умею работать с Git.</p>
+							<p>В качестве среды разработки использую MS Visual Studio. Также люблю использовать редактор Visual Studio Code. Пользуюсь Swagger для работы с API. Работаю с Git.</p>
 							<p>Из СУБД работаю в основном с MS SQL Server. Также имеется опыт работы с PostgreSQL и MySQL.</p>
 							<p>Выпускник механико-математического факультета МГУ им. М.В. Ломоносова (окончил с отличием в 2020 г.). Специализация: геометрия и топология. Область научных интересов: алгебраическая топология (бордизмы/кобордизмы, спектральные последовательности), интегрируемые системы (биллиарды, симплектическая геометрия). Научный руководитель: академик РАН А.Т. Фоменко.</p>
 							<p>Английским языком владею на достаточно высоком уровне. Люблю осваивать новые технологии и подходы в разработке.</p>
