--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 										<div class="timeline-item-arrow"><i></i></div>
 										<h3>Resort search app</h3>
 										<div class="timeline-item-content-spoiler" style="display: none;">
-											<iframe width="560" height="315" src="https://www.youtube.com/embed/-ZrHqLKS-Rk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+											<!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/-ZrHqLKS-Rk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
 											<p><a href="https://github.com/antonskvortsov10/resort-search-app">Репозиторий с исходным кодом</a></p>
 											<h3>Цель: разработка frontend-части прототипа веб-приложения по поиску курортного жилья.</h3>
 											<p>Используемые языки, фреймворки и технологии:</p>
@@ -95,7 +95,7 @@
 										<div class="timeline-item-arrow"><i></i></div>
 										<h3>DeviceShop</h3>
 										<div class="timeline-item-content-spoiler" style="display: none;">
-											<iframe width="560" height="315" src="https://www.youtube.com/embed/23FZogLEi4M" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+											<!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/23FZogLEi4M" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
 											<p><a href="https://github.com/antonskvortsov10/online-electronics-store">Репозиторий с исходным кодом</a></p>
 											<h3>Цель: разработка MVP интернет-магазина по продаже цифровой техники с использованием стека PERN.</h3>
 											<p>Используемые языки, фреймворки и технологии:</p>
@@ -117,7 +117,7 @@
 										<div class="timeline-item-arrow"><i></i></div>
 										<h3>ReStore</h3>
 										<div class="timeline-item-content-spoiler" style="display: none;">
-											<iframe width="560" height="315" src="https://www.youtube.com/embed/BMG94lw9SiM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+											<!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/BMG94lw9SiM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
 											<p><a href="https://github.com/antonskvortsov10/re-store">Репозиторий с исходным кодом</a></p>
 											<h3>Цель: разработка frontend-части веб-приложения, представляющего собой прототип интернет-магазина электронной литературы по программированию.</h3>
 											<p>Используемые языки, фреймворки и технологии:</p>
@@ -152,8 +152,8 @@
 										<div class="timeline-item-arrow"><i></i></div>
 										<h3>Parky</h3>
 										<div class="timeline-item-content-spoiler" style="display: none;">
-											<iframe width="560" height="315" src="https://www.youtube.com/embed/Ycli8AjyoBI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-											<iframe width="560" height="315" src="https://www.youtube.com/embed/Oz9eHzDtCHg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+											<!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/Ycli8AjyoBI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+											<!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/Oz9eHzDtCHg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
 											<p><a href="https://github.com/antonskvortsov10/Parky">Репозиторий с исходным кодом</a></p>
 											<h3>Цель: создание веб-приложения о национальных парках.</h3>
 											<p>Используемые языки, фреймворки и технологии:</p>
@@ -406,7 +406,7 @@
 										<div class="timeline-item-arrow"><i></i></div>
 										<h3>Asteroids</h3>
 										<div class="timeline-item-content-spoiler" style="display: none;">
-											<iframe width="560" height="315" src="https://www.youtube.com/embed/jeqE2kTEpD4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+											<!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/jeqE2kTEpD4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
 											<p><a href="https://github.com/antonskvortsov10/Asteroids">Репозиторий с исходным кодом</a></p>
 											<h3>Цель: написать аналог игры Asteroids.</h3>
 											<p>Используемые языки и библиотеки:</p>
@@ -449,9 +449,11 @@
 		</div>
 	</div>
 	<a class="scroll-top" href="#"><i class="fa fa-chevron-up"></i></a>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
 	<script> //fallback на случай недоступности google cdn
-		window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')
+		//window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')
+		window.jQuery || document.write('<script src="js/vendor/jquery-3.5.0.min.js"><\/script>')
 	</script>
 	<script src="js/main.js"></script>
 </body>
