--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<meta name="description" content="Страница разработчика">
-	<meta name="keywords" content="Антон Скворцов, А.И. Скворцов, Антон Скворцов МГУ, А.И. Скворцов МГУ, C#/.NET разработчик, Anton Skvortsov, C#/.NET Developer, Software Developer, Software Engineer">
+	<meta name="keywords" content="Антон Скворцов, Антон Скворцов МГУ, Anton Skworc, C#/.NET Developer, Software Developer, Software Engineer, Mathematician">
     <title>Антон Скворцов - Страница разработчика</title>
 	<link href='https://fonts.googleapis.com/css?family=Cuprum:700|PT+Sans:400,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
@@ -31,7 +31,7 @@
 					<ul>
 						<li><a href="mailto:anton.skvortsov.1996@yandex.ru"><i class="fa fa-envelope"></i></a></li>
 						<li><a href="https://vk.com/antonskworc" target="_blank"><i class="fa fa-vk"></i></a></li>
-						<li><a href="https://github.com/antonskvortsov10" target="_blank"><i class="fa fa-github"></i></a></li>
+						<li><a href="https://github.com/antonskworc" target="_blank"><i class="fa fa-github"></i></a></li>
 					</ul>
 				</div>
 			</aside>
